Edited work experience

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <section>
         <h3>Work Experience</h3>
         <h4>EDULIGHT CONSULTING – Dugbe, Ibadan, Oyo State. – (April, 2018 – Present) – Web Developer and I.T Trainer.</h4>
-        <article>Built modern curriculum around JavaScript and Node, taught the web foundation with latest standards.
-          Built several prototype used for teaching student and solution for small scale businesses. Increased the
-          company’s reputation by organizing monthly meet-ups for developers in Ibadan.
+        <article>Taught the web development foundation with latest standards.
+          Part of a team building several prototype used for teaching student and solution for small scale businesses. Increased the
+          company’s reputation by co-organizing monthly meet-ups for developers in Ibadan.
         </article>
       </section>
       <section>
