changes to personal info

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         self-disciplined, good work ethics and Possess a deep love for
         teaching Software development. Have passion to work with emerging web technologies and building products with production
         ready awareness and grit. Have a good team
-        spirit, deadline orientated and having the ability to organize, present complex solutions clearly and
-        accurately.</p>
+        spirit and deadline orientated.</p>
       <p>Looking for a suitable position where I can become a better developer with an exciting and
         innovative company that offers room for progression and building of maintainable products with collaborative
         efforts.
