--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <p class="dob">Date of birth: 5th of November, 1995. </p>
       <p class="info-contact">
         <span class="tel">Tel: +234 (8074) - 071 – 615,</span>
-        <p class="email">Email: <a href="mailto:abidemis01@gmail.com"> abidemis01@gmail.com</a></p>
+        <p class="email">Email: <a href="mailto:tiamiyusikiruabidemi@gmail.com"> tiamiyusikiruabidemi@gmail.com</a></p>
       </p>
       <p>Website: <a href="https://abidemi.netlify.com" target="_blank">abidemi.netlify.com</a></p>
     </div>
     <div class="personal-summary">
       <h3>Personal Information</h3>
-      <p>A bright, talented and ambitious Software developer with a strong technical JavaScript background,
+      <p>A bright, talented and ambitious Software developer with technical JavaScript background,
         self-disciplined, good work ethics and Possess a deep love for
         teaching Software development. Have passion to work with emerging web technologies and building products with production
         ready awareness and grit. Have a good team
@@ -76,6 +76,26 @@
       <p>Web Development Fundamentals - Edulight Consulting (Certificate Available).</p>
       <p>Responsive Web Design – FreeCodeCamp (Online,Certificate Available).</p>
       <p>Full Stack JavaScript – FreeCodeCamp (Online, In View).</p>
+    </div>
+    <div class="side-projects">
+      <h3>Side Projects</h3>
+      <div class="sp">
+        <div class="project">
+          <a href="https://abidemiyelpcamp.herokuapp.com">Yelp Camp</a>
+          <p>Stack: Bootstrap,Node,Express and MongoDB</p>
+          <p>Deployed: Heroku</p>
+        </div>
+        <div class="project">
+          <a href="https://abidemicodegig.herokuapp.com">Code Gig</a>
+          <p>Stack: Bootstrap(Bootswatch),Node,Express and Postgres</p>
+          <p>Deployed: Heroku</p>
+        </div>
+        <div class="project">
+          <a href="https://abidemitodoapp.netlify.com">ToDo App</a>
+          <p>Stack: Html, CSS, Bootstrap and JavaScript</p>
+          <p>Deployed: Netlify</p>
+        </div>
+      </div>
     </div>
     <div class="technical-skills">
       <h3>Technical Skills</h3>
@@ -137,6 +157,18 @@
         </div>
 
       </section>
+      <section>
+        <h4>Deployment</h4>
+        <div class="row row_cell">
+          <p class="front-end_item">
+            Heroku - <progress value="60" max="100">Heroku</progress>
+          </p>
+          <p class="front-end_item">
+            Netlify - <progress value="70" max="100">Netlify</progress>
+          </p>
+        </div>
+
+      </section>
 
     </div>
     <div class="languages">
@@ -144,7 +176,6 @@
       <ul>
         <li>English - Fluent</li>
         <li>Yoruba - Native</li>
-        <li>German - Beginner</li>
       </ul>
 
 
