--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="work-experience">
       <section>
         <h3>Work Experience</h3>
-        <h4>EDULIGHT CONSULTING – Dugbe, Ibadan, Oyo State. – (April, 2018 – Present) – Web Developer and I.T Trainer.</h4>
+        <h4>EDULIGHT CONSULTING – Dugbe, Ibadan, Oyo State. – (April, 2018 – April, 2019) – Web Developer and I.T Trainer.</h4>
         <article>Taught the web development foundation with latest standards.
           Part of a team building several prototype used for teaching student and solution for small scale businesses. Increased the
           company’s reputation by co-organizing monthly meet-ups for developers in Ibadan.
@@ -73,7 +73,7 @@
       <p>B.Sc Ed. Economics - Tai-Solarin University of Education 2012 - 2016.</p>
       <p>Computer Applications (Vocational Study) - Tai-Solarin University of Education 2012 - 2016. </p>
       <h5>Professional Qualifications:</h5>
-      <p>Web Development Fundamentals - Edulight Consulting (Certificate Available).</p>
+      <p>Web Development - Edulight Consulting (Certificate Available).</p>
       <p>Responsive Web Design – FreeCodeCamp (Online,Certificate Available).</p>
       <p>Full Stack JavaScript – FreeCodeCamp (Online, In View).</p>
     </div>
@@ -86,13 +86,23 @@
           <p>Deployed: Heroku</p>
         </div>
         <div class="project">
-          <a href="https://abidemicodegig.herokuapp.com">Code Gig</a>
-          <p>Stack: Bootstrap(Bootswatch),Node,Express and Postgres</p>
-          <p>Deployed: Heroku</p>
+          <a href="https://signinsignupform.netlify.com/">SignIn/SignUp Form</a>
+          <p>Stack: HTML, CSS and Vanilla JavaScript</p>
+          <p>Deployed: Netlify</p>
+        </div>
+        <div class="project">
+          <a href="http://jjd.netlify.com">JJD Travel Agency</a>
+          <p>Stack: HTML, CSS and Vanilla JavaScript</p>
+          <p>Deployed: Netlify</p>
         </div>
         <div class="project">
           <a href="https://abidemitodoapp.netlify.com">ToDo App</a>
           <p>Stack: Html, CSS, Bootstrap and JavaScript</p>
+          <p>Deployed: Netlify</p>
+        </div>
+        <div class="project">
+          <a href="http://languagetranslator.netlify.com">Language Translator App</a>
+          <p>Stack: Html, CSS, JavaScript Framework (Vue.Js)</p>
           <p>Deployed: Netlify</p>
         </div>
       </div>
@@ -164,7 +174,7 @@
             Heroku - <progress value="60" max="100">Heroku</progress>
           </p>
           <p class="front-end_item">
-            Netlify - <progress value="70" max="100">Netlify</progress>
+            Netlify - <progress value="80" max="100">Netlify</progress>
           </p>
         </div>
 
