--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
       <h3>Personal Information</h3>
       <p>A bright, talented and ambitious Software developer with technical JavaScript background,
         self-disciplined, good work ethics and Possess a deep love for
-        teaching Software development. Have passion to work with emerging web technologies and building products with production
-        ready awareness and grit. Have a good team
+        teaching Software development. Have passion to work with emerging web technologies and good team
         spirit and deadline orientated.</p>
-      <p>Looking for a suitable position where I can become a better developer with an exciting and
+      <p>Looking for a suitable position where I can impact knowledge and be a better developer with an exciting and
         innovative company that offers room for progression and building of maintainable products with collaborative
         efforts.
         I have been involved with building a tech community here in Ibadan.</p>
